--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -9,7 +9,7 @@
   position: relative;
 
   margin: 0 auto;
-  max-width: calc($mobile - 8px);
+  max-width: calc($mobile-max - 8px);
   padding: 0 8px;
 
   display: flex;
