--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,11 +1,17 @@
+@mixin mobile-max {
+  @media (max-width: calc($tablet - 0.02px)) {
+    @content;
+  }
+}
+
 @mixin tablet {
-	@media (min-width: $tablet) {
-		@content;
-	}
+  @media (min-width: $tablet) {
+    @content;
+  }
 }
 
 @mixin desktop {
-	@media (min-width: $desktop) {
-		@content;
-	}
+  @media (min-width: $desktop-min) {
+    @content;
+  }
 }
