--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,16 @@
-$mobile: 480px;
+// Container
+$mobile-min: 360px;
+$mobile-max: 480px;
 $tablet: 768px;
-$desktop: 1280px;
+$desktop-min: 1280px;
+$desktop-max: 1440px;
 
+$padding-mob: 72px;
+$padding-tab: 88px;
+$padding-desk: 204px;
+// ----------------------------------------------
+
+// Colors:
 $main-light-cl: #ffffff;
 $accent-cl: #dc3b5a;
 $main-dark-cl: #1e1e1e;
@@ -9,9 +18,10 @@ $secondary-dark-cl: #181818;
 
 $dark-bg: rgba(30, 30, 30, 0.1);
 $light-bg: rgba(255, 255, 255, 0.1);
+// ----------------------------------------------
 
+// Fonts:
 $main-family: 'Messina Sans Mono', sans-serif;
 $title-family: 'Right Grotesk', sans-serif;
 $accent-family: 'Biro Script Plus', sans-serif;
-
-$transition: 400ms ease-in-out;
+// ----------------------------------------------
