Add section FAQ

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -25,3 +25,6 @@ $main-family: 'Messina Sans Mono', sans-serif;
 $title-family: 'Right Grotesk', sans-serif;
 $accent-family: 'Biro Script Plus', sans-serif;
 // ----------------------------------------------
+
+//Transition:
+$transition: 500ms ease-in-out;
