--- a/src/components/Accordion/accordion.module.scss
+++ b/src/components/Accordion/accordion.module.scss
@@ -106,7 +106,8 @@
 
   transition: color $transition;
 
-  .accordion.active & {
+  .accordion.active &,
+  .accordion:hover & {
     color: $main-light-cl;
   }
 
@@ -139,6 +140,9 @@
 
   .accordion.active & {
     margin-bottom: 10px;
+    color: $accent-cl;
+  }
+  .accordion:hover & {
     color: $accent-cl;
   }
 
