--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -6,12 +6,22 @@
 }
 
 .container {
-  position: relative;
-
+  max-width: calc($mobile-max - 16px);
   margin: 0 auto;
-  max-width: calc($mobile-max - 8px);
   padding: 0 8px;
 
+  @include tablet {
+    padding: 0;
+    max-width: 712px;
+  }
+
+  @include desktop {
+    max-width: 1216px;
+  }
+}
+
+.content {
+  position: relative;
   display: flex;
   justify-content: space-between;
 }
@@ -22,4 +32,23 @@
 
   width: 48px;
   height: 32px;
+
+  cursor: pointer;
+  transition: filter $transition;
+
+  @include mobile-max {
+    &.logoInMenu {
+      filter: invert(100%);
+    }
+  }
+
+  @include desktop {
+    width: 72px;
+    height: 50px;
+  }
+
+  &:hover,
+  &:focus {
+    filter: invert(100%);
+  }
 }
