--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -7,6 +7,7 @@ body {
   color: $main-light-cl;
   font-family: $main-family, sans-serif;
   font-size: 16px;
+  overflow-x: hidden;
 
   &.noScroll {
     overflow: hidden;
@@ -36,7 +37,6 @@ body {
 
   @include desktop {
     min-width: $desktop-min;
-    max-width: $desktop-max;
     padding: 0 $padding-desk;
   }
 }
