Fix slider and mobileMenu

--- a/src/components/Menu/menu.module.scss
+++ b/src/components/Menu/menu.module.scss
@@ -7,7 +7,7 @@
     opacity $transition;
 
   &:global(.mobileMenuHidden) {
-    visibility: hidden;
+    display: none;
     height: 0;
     width: 0;
     opacity: 0;
