--- a/src/components/Arts/ArtCard/artCard.module.scss
+++ b/src/components/Arts/ArtCard/artCard.module.scss
@@ -1,8 +1,9 @@
 .img {
   display: block;
   width: 100%;
-  height: 256px;
+  min-height: 256px;
   object-fit: cover;
+  object-position: center;
   border-radius: 12px;
   overflow: hidden;
 
