--- a/src/components/ContactUs/contactUs.module.scss
+++ b/src/components/ContactUs/contactUs.module.scss
@@ -96,6 +96,7 @@
 
   font-size: 12px;
   line-height: calc(14 / 12);
+  transition: border-color $transition;
 
   @include desktop {
     border-radius: 0 12px 12px 0;
@@ -115,6 +116,23 @@
   &:focus-visible {
     outline: none;
     border-color: $main-light-cl;
+  }
+
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus {
+    border: 1px solid $main-dark-cl;
+    -webkit-text-fill-color: $main-light-cl;
+    -webkit-box-shadow: 0 0 0px 1000px $secondary-dark-cl inset;
+    transition: background-color 5000s ease-in-out 0s;
+  }
+
+  &:valid {
+    border-color: $main-light-cl;
+  }
+
+  &.errorInput {
+    border-color: $accent-cl;
   }
 }
 
